bk_ida/gccida/c3/simplify_rtx
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3283:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3285:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3296:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)x, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3296:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)x, 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3299:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3305:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)x, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3305:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)x, 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3307:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3309:9: error: expected expression
*( rtx *)&x[1], 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3358:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3360:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3363:41: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return simplify_relational_operation( ( rtx_code)( unsigned __int16)*( _DWORD *)x, v5, v4.rtx, ( rtx)v6); 
                                        ^~~~~~~~
                                        rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3363:52: error: expected expression
return simplify_relational_operation( ( rtx_code)( unsigned __int16)*( _DWORD *)x, v5, v4.rtx, ( rtx)v6); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3365:58: error: expected expression
if ( swap_commutative_operands_p( x->fld[0].rtx, *( rtx *)&x[1]) ) 
                                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3368:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3376:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtx = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3378:37: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return simplify_binary_operation( ( rtx_code)v1, v2, v8, rtx); 
                                    ^~~~~~~~
                                    rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3378:46: error: expected ')'
return simplify_binary_operation( ( rtx_code)v1, v2, v8, rtx); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3378:33: note: to match this '('
return simplify_binary_operation( ( rtx_code)v1, v2, v8, rtx); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/simplify-rtx.c:3382:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_rtx/src/obj/simplify-rtx.o] Error 1
